# PhoneConnect

./: README.md
PhoneConnect/: settings.gradle.kts
PhoneConnect/app/: build.gradle.kts
PhoneConnect/app/src/androidTest/java/com/example/phoneconnect/: ExampleInstrumentedTest.kt
PhoneConnect/app/src/main/: AndroidManifest.xml
PhoneConnect/app/src/main/java/com/example/phoneconnect/: MainActivity.kt
PhoneConnect/app/src/main/java/com/example/phoneconnect/data/model/: WsMessage.kt
PhoneConnect/app/src/main/java/com/example/phoneconnect/network/: GatewayDiscovery.kt  WsManager.kt
PhoneConnect/app/src/main/java/com/example/phoneconnect/receiver/: BootReceiver.kt
PhoneConnect/app/src/main/java/com/example/phoneconnect/service/: ServiceBus.kt  WsService.kt
PhoneConnect/app/src/main/java/com/example/phoneconnect/telephony/: CallManager.kt
PhoneConnect/app/src/main/res/drawable/: ic_notification.xml
PhoneConnect/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
PhoneConnect/app/src/main/res/xml/: network_security_config.xml
PhoneConnect/app/src/test/java/com/example/phoneconnect/: ExampleUnitTest.kt
PhoneConnect/gradle/: libs.versions.toml
PhoneConnect/gradle/wrapper/: gradle-wrapper.properties
client/: .gitignore  Cargo.toml
client/src/: api.rs  bluetooth.rs  config.rs  discover.rs  errors.rs  main.rs
server/: .env.example  .gitignore  package.json
server/src/: app.js  auth.js  connectionManager.js  discovery.js  logger.js  messageHandler.js  rateLimiter.js
server/src/routes/: call.js
(+8 files in other folders)
